# hybrid-search-demo

./: .gitignore  README.md  constants.py  crawl.py  docker-compose.yaml  embed.py  examples.md  index.py  location.py  ocr.py  parser2.py  pyproject.toml  query.py  sparse.py  tag.py  ui.py
